@@ -1,5 +1,6 @@
 Unreleased
 
+* Skip checking of hash anchors for non-html files
 * recheck/ignore/unignore requests were using an obsolete `request.is_ajax` call
   (#147)
 
